icp-backend/configMaps-secrets-istio-calico/calico/weave.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: weave-allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      app: weave-scope
  ingress:
  - from:
    - namespaceSelector: {}
