icp-backend/configMaps-secrets-istio-calico/calico/zerotrust.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: icpaiwayspolicy
  namespace: default
spec:
  podSelector:
    matchLabels: {}
